plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.0'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.final'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(24)
	}
}

repositories {
	mavenCentral()
}

dependencies {

	implementation 'commons-io:commons-io:2.16.1'

	// 1. Spring 핵심 기능 의존성
	implementation 'org.springframework.boot:spring-boot-starter-web' // 웹 MVC, REST API 개발을 위한 기본 설정 (Tomcat 포함)
	implementation 'org.springframework.boot:spring-boot-starter-validation' // @Valid 등 Bean Validation 지원
	implementation "me.paulschwarz:spring-dotenv:4.0.0"

	// 2. Spring Security 관련
	implementation 'org.springframework.boot:spring-boot-starter-security' // 스프링 시큐리티 기본 설정 (인증/인가)
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client' // Google, Kakao 등 OAuth2 로그인 클라이언트용
	implementation 'org.springframework.boot:spring-boot-starter-webflux'

	// 2-1. JWT
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
	implementation 'org.springframework.security:spring-security-crypto' // PasswordEncoder 관련

	// 3. Spring Data JPA + DB 관련
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa' // JPA ORM, Hibernate 사용
	runtimeOnly 'com.mysql:mysql-connector-j' // MySQL 연결 드라이버 (JDBC)

	// 4. Lombok (코드 간결화)
	compileOnly 'org.projectlombok:lombok' // 빌드 시 @Getter, @Builder 등 Lombok 애노테이션 지원
	annotationProcessor 'org.projectlombok:lombok' // 컴파일 시 Lombok 코드 생성 처리
	//compileOnly 'org.project lombok:lombok:1.18.32'
	//annotationProcessor 'org.project lombok:lombok:1.18.32'

	// 5. 테스트용 의존성
	testImplementation 'org.springframework.boot:spring-boot-starter-test' // JUnit5 + Mockito 포함된 스프링 테스트 설정
	testImplementation 'org.springframework.security:spring-security-test' // 시큐리티 테스트 (Mock 인증 등 지원)
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher' // JUnit 플랫폼 런처
	testImplementation 'org.mockito:mockito-core:4.8.0'
	testImplementation 'org.mockito:mockito-junit-jupiter:4.8.0'
	testRuntimeOnly 'com.h2database:h2'  // test할 때 인메모리 방식이라 가볍고 좋은 H2

	// 6. email 보내기 의존성
	implementation 'org.springframework.boot:spring-boot-starter-mail'

	// 7. Amazon S3
	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
	implementation 'software.amazon.awssdk:s3:2.20.67'

	// 8. Swagger
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.5'

	// 9. WebSocket-STOMP 방식의 채팅구현
	// implementation 'org.springframework.boot:spring-boot-starter-websocket'
	// implementation 'org.springframework:spring-messaging'

	// 10. 시간예약 quartz
	// implementation 'org.springframework.boot:spring-boot-starter-quartz'
	// implementation 'org.springframework.boot:spring-boot-starter-webflux'

	// 11. // AWS SDK v2 : NCP 도 AWS SDK로 api를 호출하게 한다.
	// implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
	// implementation 'software.amazon.awssdk:s3:2.20.67'

	// 12. Redis Refresh Token <-> DB에 저장하는 방식인 경우 필요없음
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'

	// 13.
	implementation 'net.javacrumbs.shedlock:shedlock-spring:5.13.0'
	implementation 'net.javacrumbs.shedlock:shedlock-provider-redis-spring:5.13.0'

}

tasks.named('test') {
	useJUnitPlatform()
}
